Added details of social event

--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -19,6 +19,12 @@ title: Overview
       New
     &nbsp;
     %b
+      31st May 2012:
+    The social event will take place at
+    %a{ :href => "http://www.yelp.ie/biz/lincolns-inn-dublin" } Lincoln's Inn
+    at 7:00pm.
+  %li
+    %b
       11th May 2012:
     The
     %a{ :href => "/schedule.html" } schedule
