Final thank you.

--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -15,9 +15,12 @@ title: Overview
   News
 %ul.unstyled
   %li
-    %span.label.success
-      New
-    &nbsp;
+    %b
+      9th Jun. 2012:
+    Thanks to everyone who participated in the workshop. The
+    %a{ :href => "http://www.aaai.org/Library/Workshops/ws12-03.php" } final papers
+    are now available.
+  %li
     %b
       31st May 2012:
     The social event will take place at
