Added links to blog posts and workshop at NordiCHI'12

--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -13,48 +13,75 @@ title: Overview
   The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis, particularly in social sciences and humanities as well as in industry and to discuss ideas, techniques, and applications to support social media analysis.
 %h3
   News
-%ul.unstyled
-  %li
-    %b
-      9th Jun. 2012:
-    Thanks to everyone who participated in the workshop. The
-    %a{ :href => "http://www.aaai.org/Library/Workshops/ws12-03.php" } final papers
-    are now available.
-  %li
-    %b
-      31st May 2012:
-    The social event will take place at
-    %a{ :href => "http://www.yelp.ie/biz/lincolns-inn-dublin" } Lincoln's Inn
-    at 7:00pm.
-  %li
-    %b
-      11th May 2012:
-    The
-    %a{ :href => "/schedule.html" } schedule
-    is now available.
-  %li
-    %b
-      25th Mar. 2012:
-    The
-    %a{ :href => "/schedule.html" } accepted paper list
-    is now out.
-  %li
-    %b
-      8th Mar. 2012:
-    The submission system is now closed.
-  %li
-    %b
-      1st Mar. 2012:
-    %b{ :style => "font-weight:bold; color: #ff3333;" }
-      The submission deadline has been extended until 7th March 2012.
-  %li
-    %b
-      7th Feb. 2012:
-    %a{ :href => "http://www.cs.umd.edu/~ben" } Ben Shneiderman
-    is the keynote speaker for the workshop. See the
-    %a{ :href => "/activities.html" } activities
-    page for more details.
-  %li
-    %b
-      11th Jan. 2012:
-    The website is live.
+%p
+  %b
+    11th Jul. 2012:
+  Please consider submitting papers to the
+  %a{ :href => "http://datavis.hkjung.com" } Workshop on Aesthetic Data Visualization: Tools & Challenges for Interaction Designers
+  at NordiCHI'12. The paper submission deadline is 6th Aug 2012.
+%p
+  %b
+    11th Jul. 2012:
+  The paper "Distilling Massive Amounts of Data into Simple Visualizations: Twitter Case Studies" presented at the workshop was discussed in
+  = succeed "." do
+    %a{ :href => "http://engineering.twitter.com/2012/06/studying-rapidly-evolving-user.html" } several
+    %a{ :href => "http://www.cccblog.org/2012/06/09/twitter-knows-when-you-sleep-and-more" } blog
+    %a{ :href => "http://www.theatlantic.com/technology/archive/2012/06/when-twitter-sleeps-comparing-nyc-tokyo-istanbul-and-s-o-paulo/258118" } posts
+%p
+  %b
+    11th Jul. 2012:
+  Please consider submitting papers to the
+  %a{ :href => "http://datavis.hkjung.com" } Workshop on Aesthetic Data Visualization: Tools & Challenges for Interaction Designers
+  at NordiCHI'12. The paper submission deadline is 6th Aug 2012.
+%p
+  %b
+    11th Jul. 2012:
+  The paper "Distilling Massive Amounts of Data into Simple Visualizations: Twitter Case Studies" presented at the workshop was discussed in
+  = succeed "." do
+    %a{ :href => "http://engineering.twitter.com/2012/06/studying-rapidly-evolving-user.html" } several
+    %a{ :href => "http://www.cccblog.org/2012/06/09/twitter-knows-when-you-sleep-and-more" } blog
+    %a{ :href => "http://www.theatlantic.com/technology/archive/2012/06/when-twitter-sleeps-comparing-nyc-tokyo-istanbul-and-s-o-paulo/258118" } posts
+%p
+  %b
+    9th Jun. 2012:
+  Thanks to everyone who participated in the workshop. The
+  %a{ :href => "http://www.aaai.org/Library/Workshops/ws12-03.php" } final papers
+  are now available.
+%p
+  %b
+    31st May 2012:
+  The social event will take place at
+  %a{ :href => "http://www.yelp.ie/biz/lincolns-inn-dublin" } Lincoln's Inn
+  at 7:00pm.
+%p
+  %b
+    11th May 2012:
+  The
+  %a{ :href => "/schedule.html" } schedule
+  is now available.
+%p
+  %b
+    25th Mar. 2012:
+  The
+  %a{ :href => "/schedule.html" } accepted paper list
+  is now out.
+%p
+  %b
+    8th Mar. 2012:
+  The submission system is now closed.
+%p
+  %b
+    1st Mar. 2012:
+  %b{ :style => "font-weight:bold; color: #ff3333;" }
+    The submission deadline has been extended until 7th March 2012.
+%p
+  %b
+    7th Feb. 2012:
+  %a{ :href => "http://www.cs.umd.edu/~ben" } Ben Shneiderman
+  is the keynote speaker for the workshop. See the
+  %a{ :href => "/activities.html" } activities
+  page for more details.
+%p
+  %b
+    11th Jan. 2012:
+  The website is live.
