--- a/_source/css/style.css
+++ b/_source/css/style.css
@@ -26,7 +26,7 @@ html, body {
   min-height: 500px;
   margin-left: 0;
   padding-left: 19px;
-  border-left: 1px solid #EEE; }
+  border-left: 1px solid #eeeeee; }
 
 .topbar {
   top: inherit;
