Fix typos and formatting

--- a/_source/_layouts/pages/schedule.haml
+++ b/_source/_layouts/pages/schedule.haml
@@ -10,7 +10,7 @@ title: Schedule
   %tbody
     %tr{ :style => "background-color: #f0f0f0" }
       %td{ :width => "15%" }
-        09:00 - 10:30
+        09:00 &ndash; 10:30
       %td{ :width => "85%" }
         %b
           Opening Session
@@ -37,89 +37,16 @@ title: Schedule
           Attendee Fast Forward Session
         %br
         This session will allow any participant of the workshop to freely address the attendees for one minute. The session is free form and participants are encouraged to state their background, goals, and topics of interest with respect to visualization and social media.
+    Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry.
     %tr{ :style => "background-color: #f0f0f0" }
       %td{ :width => "15%" }
-        10:30 - 11:00
+        15:00 &ndash; 15:30
       %td{ :width => "85%" }
         %b
           Break and Poster Session
     %tr{ :style => "background-color: #f0f0f0" }
       %td{ :width => "15%" }
-        11:00 - 12:30
-      %td{ :width => "85%" }
-        %b
-          Paper Session I: Images, Blogs and Streams
-        %br
-        %i
-          Chair: Daniel Archambault
-    %tr
-      %td
-      %td
-        %b
-          Visualizing Instagram: Tracing Cultural Visual Rhythms
-        %br
-        %a{ :href => "http://nadavhochman.net" } Nadav Hochman
-        and
-        %a{ :href => "http://razschwartz.net" } Raz Schwartz
-    %tr
-      %td
-      %td
-        %b
-          Cultural Analytics of Large Datasets from Flickr
-        %br
-        = succeed "," do
-          Daniela Ushizima
-        = succeed "," do
-          Lev Manovich
-        = succeed "," do
-          Todd Margolis
-        and
-        Jeremy Douglass
-    %tr
-      %td
-      %td
-        %b
-          Posting Behavior on Social Media Streams toward Temporal Bias
-        %br
-        Bumsuk Lee
-    %tr
-      %td
-      %td
-        %b
-          Visualizing Information Diffusion and Polarisation with Key Statements
-        %br
-        = succeed "," do
-          %a{ :href => "http://www.bbrel.co.uk" } Andrew Salway
-        = succeed "," do
-          Nicholas Diakopoulos
-        and
-        Dag Elgesem
-    %tr{ :style => "background-color: #f0f0f0" }
-      %td{ :width => "15%" }
-        12:30 - 13:30
-      %td{ :width => "85%" }
-        %b
-          Lunch and Poster Session
-    %tr{ :style => "background-color: #f0f0f0" }
-      %td{ :width => "15%" }
-        13:30 - 15:00
-      %td{ :width => "85%" }
-        %b
-          Applications Panel
-        %br
-        %i
-          Chair: Daniel Archambault
-        %br
-        This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry.
-    %tr{ :style => "background-color: #f0f0f0" }
-      %td{ :width => "15%" }
-        15:00 - 15:30
-      %td{ :width => "85%" }
-        %b
-          Break and Poster Session
-    %tr{ :style => "background-color: #f0f0f0" }
-      %td{ :width => "15%" }
-        15:30 - 17:00
+        15:30 &ndash; 17:00
       %td{ :width => "85%" }
         %b
           Paper Session II: Microblogs
