--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content='text/html; charset=utf-8' http-equiv='content-type' />
-    <meta content='no-cache' http-equiv='Cache-Control' />
-    <meta content='no-cache' http-equiv='Pragma' />
-    <meta content='0' http-equiv='Expires' />
+    <meta content='text/html; charset=utf-8' http-equiv='content-type'>
+    <meta content='no-cache' http-equiv='Cache-Control'>
+    <meta content='no-cache' http-equiv='Pragma'>
+    <meta content='0' http-equiv='Expires'>
     <title>
       Workshop on Social Media Visualization (SocMedVis)
     </title>
-    <meta content='Workshop on Social Media Visualization (SocMedVis)' name='description' />
-    <link href='/css/bootstrap.css' rel='stylesheet' type='text/css' />
-    <link href='/css/style.css' rel='stylesheet' type='text/css' />
-    <link href='/css/banner.css' rel='stylesheet' type='text/css' />
+    <meta content='Workshop on Social Media Visualization (SocMedVis)' name='description'>
+    <link href='/css/bootstrap.css' rel='stylesheet' type='text/css'>
+    <link href='/css/style.css' rel='stylesheet' type='text/css'>
+    <link href='/css/banner.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id='banner'>
@@ -34,7 +34,7 @@
               <a href='http://www.icwsm.org'>the International AAAI Conference on Weblogs and Social Media</a>
               &nbsp;
               <a href='http://www.icwsm.org'>
-                <img height='25px' src='media/icwsm_logo.png' width='121px' />
+                <img height='25px' src='media/icwsm_logo.png' width='121px'>
               </a>
             </p>
           </div>
@@ -92,17 +92,15 @@
         </footer>
       </div>
     </div>
-    <script type='text/javascript'>
-      //<![CDATA[
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-496232-10']);
-        _gaq.push(['_trackPageview']);
-        (function() {
-          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-      //]]>
+    <script>
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-496232-10']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
     </script>
   </body>
 </html>
